# terminal-todo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Config/: ConfigFile.cpp  ConfigFile.h
Curl/: Curl.cpp  Curl.h
